Fix justification on mobile

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
   padding: 20px;
   font-family: monospace;
   text-align: justify;
-  text-justify: inter-word;
-  hyphens: auto;
   font-size: 16px;
   color: rgba(0,0,0);
   background-attachment: fixed;
@@ -53,9 +51,6 @@ aside {
 a {
   text-decoration: none;
   color: rgb(51,51,153);
-  display: inline-block;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
 }
 
 a:hover { 
